commands and unit tests for them added