@@ -1,23 +1,57 @@
 package spring.spring5recipeapp.controllers;
 
+import lombok.extern.log4j.Log4j2;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import spring.spring5recipeapp.domain.Recipe;
+import org.springframework.web.bind.annotation.*;
+import spring.spring5recipeapp.commands.RecipeCommand;
 import spring.spring5recipeapp.services.RecipeService;
 
+@Log4j2
 @Controller
 public class RecipeController {
     RecipeService recipeService;
 
-    public RecipeController(RecipeService recipeService) {
+    public RecipeController(final RecipeService recipeService) {
         this.recipeService = recipeService;
     }
 
-    @RequestMapping("/recipe/show/{id}")
-    public String showByID(@PathVariable String id, Model model) {
-        model.addAttribute("recipe", recipeService.findByID(new Long(id)));
+    @GetMapping
+    @RequestMapping("/recipe/{id}/show")
+    public String showByID(@PathVariable final String id, final Model model) {
+        model.addAttribute("recipe", recipeService.findByID(Long.valueOf(id)));
         return "recipe/show";
     }
+
+    @GetMapping
+    @RequestMapping("recipe/new")
+    public String newRecipe(final Model model) {
+        model.addAttribute("recipe", new RecipeCommand());
+
+        return "recipe/recipeform";
+    }
+
+    @GetMapping
+    @RequestMapping("recipe/{id}/update")
+    public String updateRecipe(@PathVariable final String id, final Model model) {
+        model.addAttribute("recipe", recipeService.findCommandByID(Long.valueOf(id)));
+
+        return "recipe/recipeform";
+    }
+
+    @PostMapping
+    @RequestMapping("recipe")
+    public String saveOrUpdate(@ModelAttribute final RecipeCommand command) {
+        final RecipeCommand savedCommand = recipeService.saveRecipeCommand(command);
+        return "redirect:/recipe/" + savedCommand.getId() + "/show";
+    }
+
+    @GetMapping
+    @RequestMapping("recipe/{id}/delete")
+    public String deleteRecipeById(@PathVariable final String id) {
+        log.debug("Deleting Recipe with id: {}", id);
+        recipeService.deleteById(Long.valueOf(id));
+        return "redirect:/";
+    }
+
 }
